testdata/baselines/reference/submodule/conformance/parenthesizedContexualTyping3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'TemplateStringsArray'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
parenthesizedContexualTyping3.ts(6,31): error TS2304: Cannot find name 'TemplateStringsArray'.
parenthesizedContexualTyping3.ts(7,31): error TS2304: Cannot find name 'TemplateStringsArray'.
parenthesizedContexualTyping3.ts(8,31): error TS2304: Cannot find name 'TemplateStringsArray'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'TemplateStringsArray'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== parenthesizedContexualTyping3.ts (3 errors) ====
    // Contextual typing for parenthesized substitution expressions in tagged templates.
    
    /**
     * tempFun - Can't have fun for too long.
     */
    function tempFun<T>(tempStrs: TemplateStringsArray, g: (x: T) => T, x: T): T;
                                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function tempFun<T>(tempStrs: TemplateStringsArray, g: (x: T) => T, h: (y: T) => T, x: T): T;
                                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    function tempFun<T>(tempStrs: TemplateStringsArray, g: (x: T) => T, x: T): T {
                                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
        return g(x);
    }
    
    var a = tempFun `${ x => x }  ${ 10 }`
    var b = tempFun `${ (x => x) }  ${ 10 }`
    var c = tempFun `${ ((x => x)) } ${ 10 }`
    var d = tempFun `${ x => x } ${ x => x } ${ 10 }`
    var e = tempFun `${ x => x } ${ (x => x) } ${ 10 }`
    var f = tempFun `${ x => x } ${ ((x => x)) } ${ 10 }`
    var g = tempFun `${ (x => x) } ${ (((x => x))) } ${ 10 }`
    var h = tempFun `${ (x => x) } ${ (((x => x))) } ${ undefined }`